--- a/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/misApuntes.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html></head>
+<!DOCTYPE html>
+</head>
 <div th:insert="~{nav}"></div>
 <body>
 <div class="mx-auto my-2" style="width: 200px;">
@@ -6,16 +7,29 @@
 </div>
 <div class="container">
     <div class="row">
-        <div th:each="apunte : ${apuntes}"  class="col">
-            <div class="card my-2" style="width: 18rem;">
+        <div class="col">
+            <h2>Mis Apuntes Comprados</h2>
+            <div th:each="apunte : ${apuntesComprados}" class="card my-2" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 th:text="${apunte.nombre}" class="card-title"></h5>
+                    <h5 th:text="${apunte.apunte.nombre}" class="card-title"></h5>
                     <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
-                    <p th:text="${apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
-                    <a th:href="@{/detalleApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Detalles</a>
-                    <a th:href="@{/editarApunte/{id}(id=${apunte.id})}" class="btn btn-primary">Editar</a>
-                    <a th:href="@{/eliminarApunte/{id}(id=${apunte.id})}" class="btn btn-danger">Eliminar</a>
-                    <p th:text="${apunte.precio}" class="card-text" style="height: 6rem;"></p>
+                    <p th:text="${apunte.apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
+                    <a th:href="@{/detalleApunte/{id}(id=${apunte.apunte.id})}" class="btn btn-primary">Detalles</a>
+                    <p th:text="${apunte.apunte.precio}" class="card-text" style="height: 6rem;"></p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <h2>Mis Apuntes Creados</h2>
+            <div th:each="apunte : ${apuntesCreados}" class="card my-2" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 th:text="${apunte.apunte.nombre}" class="card-title"></h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Materia</h6>
+                    <p th:text="${apunte.apunte.descripcion}" class="card-text" style="height: 6rem;"></p>
+                    <a th:href="@{/detalleApunte/{id}(id=${apunte.apunte.id})}" class="btn btn-primary">Detalles</a>
+                    <a th:href="@{/editarApunte/{id}(id=${apunte.apunte.id})}" class="btn btn-primary">Editar</a>
+                    <a th:href="@{/eliminarApunte/{id}(id=${apunte.apunte.id})}" class="btn btn-danger">Eliminar</a>
+                    <p th:text="${apunte.apunte.precio}" class="card-text" style="height: 6rem;"></p>
                 </div>
             </div>
         </div>
