--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
 <div th:insert="~{nav}"></div>
 <body>
-    <main class="container">
-        <a th:if="${tipoDeAcceso.LEER}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
-        <p th:text="${apunte.nombre}"></p>
-        <p th:text="${apunte.descripcion}"></p>
-        <p th:text="${apunte.pathArchivo}"></p>
-        <table border="1">
+    <main class="container mt-5">
+        <div class="row">
+            <div class="col-12 col-sm-9">
+              <iframe src="https://www.orimi.com/pdf-test.pdf" frameborder="0" height="500px" width="100%"></iframe>
+            </div>
+            <div class="col-12 col-sm-3">
+                <h2 th:text="${apunte.nombre}"></h2>
+                <p class="fw-bold">Descripción: <span class="fw-normal" th:text="${apunte.descripcion}"></span></p>
+                <p class="fw-bold">Path: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
+                <a th:if="${tipoDeAcceso.LEER}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
+            </div>
+        </div>
+        <hr>
+        <h3>Reseñas</h3>
+        <table class="w-100">
             <thead>
-            <tr>
-                <th>Título</th>
-                <th>Contenido</th>
-            </tr>
+                <tr>
+                    <th>Comentario</th>
+                    <th>Valoración</th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            <tr th:each="resena : ${resenas}">
-                <td th:text="${resena.descripcion}"></td>
-                <td th:text="${resena.cantidadDeEstrellas}"></td>
-                <td>
-                    <a th:href="@{'/borrarResena/' + ${resena.id}}" class="btn btn-danger">Borrar</a>
-                </td>
-            </tr>
+                <tr th:each="resena : ${resenas}">
+                    <td th:text="${resena.descripcion}"></td>
+                    <td th:text="${resena.cantidadDeEstrellas}"></td>
+                    <td>
+                        <a th:href="@{'/borrarResena/'+${resena.id}}" class="btn btn-danger m-1">Borrar</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
         
