--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -97,34 +97,15 @@
         </div>
     </section>
 
-    <!-- Sección de Usuarios Destacados -->
     <section class="my-5">
         <h1 class="text-center">Usuarios Destacados</h1>
         <div class="row">
-            <div class="col-md-4">
+            <div th:each="usuario : ${usuariosDestacados}" class="col-md-4 text-center">
                 <div class="card">
-                    <img src="usuario1.jpg" class="card-img-top" alt="Usuario 1">
+                    <img th:src="@{'/img/' + ${usuario.fotoPerfil}}" alt="Foto de perfil" width="150" height="150">
                     <div class="card-body">
-                        <h5 class="card-title">Usuario 1</h5>
-                        <p class="card-text">Descripción del Usuario 1.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="usuario2.jpg" class="card-img-top" alt="Usuario 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Usuario 2</h5>
-                        <p class="card-text">Descripción del Usuario 2.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="usuario3.jpg" class="card-img-top" alt="Usuario 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Usuario 3</h5>
-                        <p class="card-text">Descripción del Usuario 3.</p>
+                        <h5 class="card-title" th:text="${usuario.nombre}"></h5>
+                        <p class="card-text" th:text="${usuario.email}"></p>
                     </div>
                 </div>
             </div>
@@ -133,7 +114,6 @@
 </main>
 
 <footer class="bg-dark text-light text-center py-3">
-    <!-- Pie de página de tu sitio web -->
     <p>&copy; Derechos - Privacidad - Etc.</p>
 </footer>
 </body>
