--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -106,6 +106,7 @@
                     <div class="card-body">
                         <h5 class="card-title" th:text="${usuario.nombre}"></h5>
                         <p class="card-text" th:text="${usuario.email}"></p>
+                        <a th:href="@{'/perfilUsuario/' + ${usuario.id}}" class="btn btn-primary">Ver perfil y apuntes</a>
                     </div>
                 </div>
             </div>
