--- a/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/apunte-detalle.html
@@ -10,8 +10,8 @@
                 <h2 th:text="${apunte.nombre}"></h2>
                 <p class="fw-bold">Descripción: <span class="fw-normal" th:text="${apunte.descripcion}"></span></p>
                 <p class="fw-bold">Path: <span class="fw-normal" th:text="${apunte.pathArchivo}"></span></p>
-                <div th:if="${!hayResena}">
-                    <a th:if="${tipoDeAcceso.LEER}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
+                <div th:if="${tipoDeAcceso}">
+                    <a th:if="${!hayResena}" th:href="@{'/formulario-alta-resena'}" class="btn btn-primary">Agregar Reseña</a>
                 </div>
 
             </div>
