--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-alta-resena.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 <div th:insert="~{nav}"></div>
 <body>
 <main class="container">
@@ -9,20 +10,30 @@
     <h1>Formulario de Reseña</h1>
     <form action="#" th:action="@{/guardarResena}" method="POST" th:object="${resena}"> 
         <label for="descripcion">Comentario:</label><br>
-        <textarea th:field="*{descripcion}" id="descripcion" name="descripcion"  rows="4" cols="50" required></textarea><br><br>
+        <textarea th:field="*{descripcion}" id="descripcion" rows="4" cols="50" ></textarea><br><br>
 
-        <label for="calificacion">Calificación:</label>
-        <select id="calificacion" name="calificacion" th:field="*{cantidadDeEstrellas}" required>
+        <div th:if="${#fields.hasErrors('descripcion')}" class="text-danger">
+            <p th:errors="*{descripcion}"></p>
+        </div>
+
+
+        <label for="cantidadDeEstrellas">Calificación:</label>
+        <select id="cantidadDeEstrellas" name="cantidadDeEstrellas" th:field="*{cantidadDeEstrellas}" required>
             <option value="1">1 - Muy Malo</option>
             <option value="2">2 - Malo</option>
             <option value="3">3 - Regular</option>
             <option value="4">4 - Bueno</option>
             <option value="5">5 - Excelente</option>
         </select><br><br>
-        
+
+        <div th:if="${#fields.hasErrors('cantidadDeEstrellas')}" class="text-danger">
+            <p th:errors="*{cantidadDeEstrellas}"></p>
+        </div>
+
         <input type="submit" value="Guardar Reseña">
 
     </form>
     <div th:if="${error}" class="error-message" th:text="${error}"></div>
 </main>
 </body>
+</html>
