--- a/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/altaApunte.html
@@ -9,20 +9,32 @@
                 <label for="nombre">Nombre del Apunte:</label>
                 <input type="text" id="nombre" th:field="*{nombre}" class="form-control" required="required" />
             </div>
+            <div th:if="${#fields.hasErrors('nombre')}" class="text-danger">
+                <p th:errors="*{nombre}"></p>
+            </div>
 
             <div class="form-group">
                 <label for="descripcion">Descripción:</label>
                 <textarea id="descripcion" th:field="*{descripcion}" class="form-control" rows="4" required="required"></textarea>
+            </div>
+            <div th:if="${#fields.hasErrors('descripcion')}" class="text-danger">
+                <p th:errors="*{descripcion}"></p>
             </div>
 
             <div class="form-group">
                 <label for="archivo">Path del Archivo:</label>
                 <input type="text" id="archivo" th:field="*{pathArchivo}" class="form-control" required="required" />
             </div>
+            <div th:if="${#fields.hasErrors('pathArchivo')}" class="text-danger">
+                <p th:errors="*{pathArchivo}"></p>
+            </div>
 
             <div class="form-group">
                 <label for="precio">Precio</label>
-                <input type="text" id="precio" th:field="*{precio}" class="form-control" required="required" />
+                <input type="number" id="precio" th:field="*{precio}" class="form-control" required="required" />
+            </div>
+            <div th:if="${#fields.hasErrors('precio')}" class="text-danger">
+                <p th:errors="*{precio}"></p>
             </div>
 
             <div th:if="${error}" class="error-message" th:text="${error}"></div>
